# primap2

./: .check_python_version.py  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.md  README.rst  TODO.rst  downscale_test_reference.nc  notes.md  primap-stubs.patch  pyproject.toml  requirements_dev.txt  requirements_upstream_dev.txt  setup.cfg  setup.py  tbump.toml  testhints.py  towncrier_github_release_notes.toml  towncrier_github_release_notes_template.md  tox.ini  update_changelog.py  update_changelog_latest_version.py  update_citation_info.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci-upstream-dev.yml  ci.yml
changelog/: 225.fix.md  259.improvement.md  261.improvement.md  264.docs.md  268.improvement.md  270.trivial.md  271.docs.md  272.breaking.md  273.fix.md  274.docs.md  275.trivial.md  276.improvement.md  277.breaking.md  278.fix.md  279.enhancement.md  286.improvement.md  288.improvement.md  290.trivial.md  291.improvement.md  304.trivial.md  305.trivial.md  306.fix.md  313.fix.md  322.fix.md  323.fix.md  323.improvement.md  324.fix.md  330.improvement.md  350.breaking.md  350.fix.md  README.md  pr.fix.md
changelog_unreleased/: aggregate_and_merge_fixes.rst  apidocs.rst  changelog-dir.rst  compatibility-new-pint-xarray.rst  compose-entity.rst  compose-exclude.rst  compose-null-identity.rst  compose-strategy-unable.rst  crf-fixes.rst  csg-strategy-aggregate.rst  csg.rst  data_reading_fixes.rst  depend-openscm-units.rst  deprecations.rst  doc-fixes.rst  downscaling_fixed.rst  drop_python_3.8.rst  faster-merge.rst  fix-data-reading.rst  fix-gas-basket-functions.rst  fix-if-dimensionless.rst  fix-new-pint.rst  fix-new-xarray.rst  fix-release.rst  fix-rtd.rst  fix-set-nan-overwrite.rst  merge.rst  new-openscm-units.rst  new-pint.rst  new-xarray-compat.rst  no-pdf-docs.rst  no-python312.rst  no-python39.rst  pandas2.rst  pin-pint.rst  pint-xarray.rst  processing-metadata.rst  publication_date.rst  python-3.11.rst  python.3.10.rst  (+10 more)
docs/: Makefile  api.rst  conf.py  credits.rst  data_format.rst  data_format_details.rst  data_format_examples.ipynb  data_reading.rst  data_reading_example_PRIMAP-hist.ipynb  data_reading_example_test_data.ipynb  datalad.rst  development.rst  index.rst  installation.rst  interchange_format_details.rst  interchange_format_examples.ipynb  modules.rst  opulent_ds.nc  pm2io.rst  primap2.rst  requirements.txt  special_usage.ipynb  test_csv_data_sec_cat_if.csv  test_csv_data_sec_cat_if.yaml  usage.ipynb  usage.rst
docs-old/: Makefile  api.md  api.rst  changelog.md  credits.md  credits.rst  data_format_examples.ipynb  data_reading.rst  development.md  index.md  index.rst  make.bat  pm2io.rst  special_usage.ipynb
docs-old/_static/: custom.css
docs/data_reading_examples/: .gitignore  FAOstat.ipynb  test_csv_data_long.csv  test_data_wide.ipynb
docs/data_reading_writing_examples/: FAOstat.ipynb  test_data_long.ipynb
docs/rosetta/: combine_rows-set.ipynb
docs/source/: changelog.md  conf.py  credits.md  data_format_details.md  data_format_examples.md  data_format_examples.py  data_reading.md  data_structures.md  datalad.md  development.md  ideas_for_sparse_data.md  index.md  installation.md  interchange_format_examples.md  interchange_format_examples.py  jupytext.toml  minimal_ds.nc  pyproject.toml  special_usage.md  special_usage.py  usage.py
docs/source/_static/: site.webmanifest
docs/source/api/: .gitignore  generate_api_docs.py  index.rst
docs/source/apidoc/: primap2.csg.rst  primap2.pm2io.rst  primap2.rst
docs/source/data_format/: data_format_details.md  data_format_examples.md  index.md  interchange_format_details.md  interchange_format_examples.md
docs/source/data_reading/: .gitignore  index.md  old-PRIMAP-hist.md  test_csv_data_sec_cat_if.yaml  test_data_long.md  test_data_wide.md
docs/source/data_reading_writing_examples/: FAOstat.ipynb  PRIMAP-hist.ipynb  old-PRIMAP-hist.md  test_csv_data_sec_cat_if.csv  test_data_long.md  test_data_long.py  test_data_wide.md  test_data_wide.py
docs/source/notebooks/: {% if initial_setup %}basic-demo.py{% endif %}.jinja
docs/source/usage/: add_and_overwrite.md  csg.md  downscaling.md  gas_baskets.md  index.md  logging.md  merge.md  select_and_view.md  skipna.md  store_and_load.md  usage.md  usage.py
licenses/: pint_xarray_license  xarray_license
primap2/: __init__.py  _accesor_base.py  _accessor_base.py  _accessors.py  _aggregate.py  _alias_selection.py  _convert.py  _data_format.py  _data_reading.py  _dim_names.py  _downscale.py  _fill_combine.py  _merge.py  _metadata.py  _overview.py  _selection.py  _setters.py  _types.py  _unit_registry.py  _units.py  accessors.py  data_format.py
primap2/csg/: __init__.py  _compose.py  _models.py  _wrapper.py
primap2/csg/_strategies/: exceptions.py  gaps.py  global_least_squares.py  identity.py  local_least_squares.py  local_trends.py  null.py  substitution.py
primap2/io/: __init__.py  _data_reading.py
primap2/pm2io/: _GHG_inventory_reading.py  __init__.py  _conversion.py  _data_reading.py  _interchange_format.py
primap2/tests/: __init__.py  conftest.py  examples.py  test_aggregate.py  test_alias_selection.py  test_conversion.py  test_convert.py  test_data_format.py  test_data_reading.py  test_downscale.py  test_fill_combine.py  test_interchange_format.py  test_merge.py  test_metadata.py  test_overview.py  test_selection.py  test_setters.py  test_sparse_arrays.py  test_units.py  utils.py
primap2/tests/csg/: test_compose.py  test_gaps.py  test_models.py  test_strategies.py  test_wrapper.py  utils.py
primap2/tests/data/: BURDI_conversion.csv  Guetschow-et-al-2021-PRIMAP-crf96_2021-v1.csv  Guetschow-et-al-2021-PRIMAP-crf96_2021-v1.nc  Guetschow-et-al-2021-PRIMAP-crf96_2021-v1.yaml  PRIMAP-csg-test.nc  downscale_test_original.nc  long.csv  long_no_time.csv  primap2_test_data_v2.5.1_final.nc  simple_categorisation_b.yaml  (+20 more)
scripts/: read_IMF_data.py
tests/: __init__.py  test_primap2.py
