[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "setuptools_scm[toml]>=3.4"
]
build-backend = "setuptools.build_meta"

[tool.ruff]
extend-exclude = [
  "climate_categories/data/*.py",
  "climate_categories/tests/data/*.py"
]
lint.extend-select = [ "W", "I", "UP", "B", "NPY", "RUF" ]
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["primap2"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
