[build-system]
requires = [
    "setuptools>=66",
    "wheel>=0.42",
    "build>=1.0.0",
    "setuptools_scm[toml]==8.1"
]
build-backend = "setuptools.build_meta"

[tool.ruff]
extend-include = ["*.ipynb"]
extend-exclude = [
  "climate_categories/data/*.py",
  "climate_categories/tests/data/*.py",
  "docs-old/",
  "docs/*"
]
line-length = 100
lint.extend-select = [ "E", "W", "I", "UP", "B", "YTT", "A", "NPY", "RUF", "FURB", "FLY", "PYI" ]
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["primap2"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.setuptools_scm]

[tool.pytest.ini_options]
# actually, importlib.resources.open_text will be undeprecated again in python 3.13
filterwarnings = "ignore:.*open_text is deprecated.*:DeprecationWarning"

[tool.towncrier]
package = "primap2"
package_dir = "primap2"
filename = "docs/source/changelog.md"
directory = "changelog/"
title_format = "## primap2 {version} ({project_date})"
underlines = ["", "", ""]
issue_format = "[#{issue}](https://github.com/primap-community/primap2/pull/{issue})"

  [[tool.towncrier.type]]
  directory = "breaking"
  name = "Breaking Changes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "deprecation"
  name = "Deprecations"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "feature"
  name = "Features"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "improvement"
  name = "Improvements"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "fix"
  name = "Bug Fixes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "docs"
  name = "Improved Documentation"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "trivial"
  name = "Trivial/Internal Changes"
  showcontent = false
