[metadata]
name = primap2
version = 0.10.0
author = Mika Pflüger
author_email = mika.pflueger@climate-resource.com
description = The next generation of the PRIMAP climate policy analysis suite.
long_description = file: README.rst, CHANGELOG.rst
long_description_content_type = text/x-rst
url = https://github.com/pik-primap/primap2
project_urls =
    Documentation = https://primap2.readthedocs.io/
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Atmospheric Science
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
license = Apache Software License 2.0
license_files = LICENSE

[options]
packages =
    primap2
    primap2.pm2io
    primap2.tests
    primap2.tests.data
python_requires = >=3.10, <3.12
setup_requires =
    setuptools_scm
install_requires =
    attrs
    xarray>=2022.6.0
    pint>=0.23
    pint_xarray>=0.3
    numpy>=1.23.0,<2.0
    pandas>=1.5.0
    openscm_units>=0.5.1
    loguru
    scipy>=1.9.0
    h5netcdf>=0.10
    h5py
    bottleneck
    matplotlib
    ruamel.yaml
    strictyaml
    openpyxl
    tqdm

[options.extras_require]
test =
    pytest
    pytest-cov
    xdoctest
dev =
    pip
    tbump
    wheel
    build
    flake8
    coverage
    Sphinx>=4.2
    sphinx-rtd-theme
    twine
    pre-commit
    pytest
    pytest-cov
    xdoctest
    setuptools
    nbsphinx
    numpydoc
    ipykernel
    jupyter
    sphinx-autosummary-accessors
    mypy
    tox
    numpydoc
datalad =
    datalad

[options.package_data]
* =
    *.csv
    *.nc

[doc8]
max-line-length = 88
ignore-path-errors = docs/data_format_details.rst;D001,docs/interchange_format_details.rst;D001
