[metadata]
name = primap2
version = 0.11.2
author = Mika Pflüger
author_email = mika.pflueger@climate-resource.com
description = The next generation of the PRIMAP climate policy analysis suite.
long_description = file: README.md, changelog.md
long_description_content_type = text/x-rst
url = https://github.com/pik-primap/primap2
project_urls =
    Documentation = https://primap2.readthedocs.io/
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Atmospheric Science
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
license = Apache Software License 2.0
license_files = LICENSE

[options]
packages =
    primap2
    primap2.pm2io
    primap2.csg
    primap2.csg._strategies
    primap2.tests
    primap2.tests.csg
    primap2.tests.data
python_requires = >=3.10, <3.13
setup_requires =
    setuptools_scm==8.1
install_requires =
    attrs>=23
    xarray>=2024.09
    numbagg>=0.8.1
    pint>=0.24
    pint_xarray>=0.4
    numpy>=1.26,<2
    pandas>=2.2.2
    openscm_units>=0.6
    loguru>=0.7
    scipy>=1.13.0
    h5netcdf>=1
    h5py>=3.10.0
    matplotlib>=3.7
    ruamel.yaml>=0.18
    strictyaml>=1.7.3
    openpyxl>=3.1
    tqdm>=4.66
    msgpack>=1

[options.extras_require]
test =
    pytest>=8
    pytest-cov>=4
    xdoctest>=1.2
# install development versions of central upstream libraries
upstream-dev =
    pint@git+https://github.com/hgrecco/pint
    pint_xarray@git+https://github.com/xarray-contrib/pint-xarray
    xarray@git+https://github.com/pydata/xarray
    pandas@git+https://github.com/pandas-dev/pandas
    openscm_units@git+https://github.com/openscm/openscm-units
    # numpy dev currently not supported
    #numpy@git+https://github.com/numpy/numpy
dev =
    tbump>=6.11
    wheel>=0.42
    coverage>=7.4
    Sphinx>=6
    myst-nb>=1
    sphinx-book-theme>=1.1
    sphinx-favicon>=1.0
    jupytext>=1.16
    sphinx-copybutton>=0.5.2
    sphinx-autosummary-accessors>=2023.4
    sphinx-tippy>=0.4.3
    numpydoc>=1.6
    twine>=5
    pre-commit>=3.6
    pytest>=8
    pytest-cov>=4
    xdoctest>=1.2
    setuptools>=66
    towncrier>=23.6.0
    ipykernel>=6.27.1
    jupyter>=1.1
    mypy>=1.11
    tox>=4.11
    tox-uv>=1.11.3
    ruff>=0.6.3
    ruff-lsp>=0.0.50
datalad =
    datalad>=1.1

[options.package_data]
* =
    *.csv
    *.nc

[doc8]
max-line-length = 88
ignore-path-errors = docs/data_format_details.rst;D001,docs/interchange_format_details.rst;D001
